# medsrtqc

./: .gitignore  Makefile  README.ipynb  README.md  arvor_bgc_win.txt  batman_test.py  bgc_rtqc.py  core.html  genindex.html  index.html  interactive.html  min_example_issue13.py  nc.html  objects.inv  py-modindex.html  qc.html  realistic_rtqc_script.py  resources.html  run_batman_test.bat  run_realistic_script.bat  search.html  searchindex.js  setup.cfg  vms.html
.github/workflows/: build.yaml  check.yaml  code-coverage.yaml  docs.yaml
_docs/: .buildinfo  genindex.html  index.html  vms.html
_docs/.doctrees/: environment.pickle  index.doctree  vms.doctree
_docs/_sources/: index.rst.txt
_sources/: core.rst.txt  index.rst.txt  nc.rst.txt  qc.rst.txt  vms.rst.txt
docs/: conf.py  core.rst  index.rst  interactive.rst  resources.rst  vms.rst
medsrtqc/: betasw.py  coefficient.py  core.py  history.py  interactive.py  nc.py  vms.py
medsrtqc/qc/: bbp.py  check.py  chla.py  flag.py  history.py  named_tests.py  operation.py  ph.py  radio.py  util.py
medsrtqc/resources/: BD6903197_026.nc  BINARY_VMS.json  OUTPUT_RT.json  R6904117_085.nc  __init__.py  call_main_ocproc.py  doxy_bgc_calibration_coef.csv  doxy_calibration_coef.csv  last_dark_chla.csv  ocprocReadWrite.py  park_depth.csv
medsrtqc/vms/: __init__.py  core_impl.py  (+11 more)
scripts/: test_bbp_update.py
tests/: test_bbp.py  test_check.py  test_chla.py  test_core.py  test_history.py  test_interactive.py  test_nc.py  test_pH.py  test_qc.py  test_qc_operation.py  test_radiometry.py  test_resources.py  test_vms.py
(+3 files in other folders)
