[metadata]
name = medsrtqc
version = 0.0.1
author = Dewey Dunnington
author_email = dewey.dunnington@dfo-mpo.gc.ca
description = Real-time Quality Control for MEDS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArgoCanada/medsrtqc
project_urls =
    Bug Tracker = https://github.com/ArgoCanada/medsrtqc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    medsrtqc = medsrtqc
packages = 
    medsrtqc
    medsrtqc.vms
    medsrtqc.resources
python_requires = >=3.6
install_requires =
    numpy
    gsw
    netCDF4

[options.package_data]
medsrtqc.resources =
    BINARY_VMS.DAT
    BINARY_VMS.json
    BR6904117_085.nc
    R6904117_085.nc